--- a/card_navigator_backend/pyvenv.cfg
+++ b/card_navigator_backend/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = E:\Programs\Python
+home = C:\Users\axel\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
-version = 3.10.4
+version = 3.11.1
+executable = C:\Users\axel\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\axel\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\axel\Desktop\Repo\CardNavigator\card_navigator_backend\card_navigator_backend
